# letterboxd_telegram_bot

./: Cargo.toml  Procfile  README.md
src/: letterboxd.rs  main.rs
