[package]
name = "letterboxd-telegram-bot"
version = "0.1.0"
authors = ["João Oliveira <hello@jxs.pt>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "0.2.0-alpha.2"
telegram-bot = { git = "https://github.com/jxs/telegram-bot/" }
hyper = { git = "https://github.com/hyperium/hyper.git"}
hyper-rustls = { git = "https://github.com/markuskobler/hyper-rustls", branch = "futures-0.3" }
futures-preview = "=0.3.0-alpha.18"
log = "0.4.8"
env_logger = "0.6.2"
failure = "0.1.5"
urlencoding = "1.0.0"
select = "0.4.3"
